# mmsdm-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  done  mmsdm.json  mmsdm_v430.json  mmsdm_v5.2.json  mmsdm_v5.3.json  mmsdm_v5.4.json  mmsdm_v5.5.json  mmsdm_v500.json  startdb.sh  stopdb.sh  table_config_v5.2.csv  table_config_v5.2.tsv  table_config_v5.3.csv  table_config_v5.4.csv  table_config_v5.5.csv  table_mapping.csv  table_mapping_v5.1.csv
codegen/: Cargo.toml  cargo.fish
codegen/src/: analyse.rs  clickhouse_rust.rs  clickhouse_tables.rs  download.rs  html_tree.rs  json.rs  main.rs  mms.rs  parquet.rs  pdr.rs  python.rs  rust.rs  sql_server_rust.rs  sql_server_tables.rs
crates/ancillary_services/: Cargo.toml
crates/ancillary_services/src/: lib.rs
crates/asoffer/: Cargo.toml
crates/asoffer/src/: lib.rs
crates/bids/: Cargo.toml
crates/bids/src/: lib.rs
crates/billing_config/: Cargo.toml
crates/billing_config/src/: lib.rs
crates/billing_run/: Cargo.toml
crates/billing_run/src/: lib.rs
crates/configuration/: Cargo.toml
crates/demand_forecasts/: Cargo.toml
crates/demand_forecasts/src/: lib.rs
crates/dispatch/: Cargo.toml
crates/dispatch/src/: lib.rs
crates/force_majeure/: Cargo.toml
crates/force_majeure/src/: lib.rs
crates/gd_instruct/: Cargo.toml
crates/gd_instruct/src/: lib.rs
crates/generic_constraint/: Cargo.toml
crates/generic_constraint/src/: lib.rs
crates/historical/: Cargo.toml
crates/historical/src/: lib.rs
crates/historical_tables/: Cargo.toml
crates/historical_tables/src/: lib.rs
crates/irauction/: Cargo.toml
crates/irauction/src/: lib.rs
crates/market_config/: Cargo.toml
crates/market_config/src/: lib.rs
crates/market_notice/: Cargo.toml
crates/market_notice/src/: lib.rs
crates/mcc_dispatch/: Cargo.toml
crates/mcc_dispatch/src/: lib.rs
crates/meter_data/: Cargo.toml
crates/meter_data/src/: lib.rs
crates/mmsdm/: Cargo.toml
crates/mmsdm/src/: lib.rs
crates/mmsdm_core/: Cargo.toml
crates/mmsdm_core/src/: arrow.rs  error.rs  io.rs  lib.rs  sql_server.rs
crates/mtpasa/: Cargo.toml
crates/mtpasa/src/: lib.rs
crates/mtpasa_solution/: Cargo.toml
crates/mtpasa_solution/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/p5min/: Cargo.toml
crates/p5min/src/: lib.rs
crates/participant_registration/: Cargo.toml
crates/participant_registration/src/: lib.rs
crates/pdpasa/: Cargo.toml
crates/pdpasa/src/: lib.rs
crates/pre_dispatch/: Cargo.toml
crates/pre_dispatch/src/: lib.rs
crates/prudentials/: Cargo.toml
crates/prudentials/src/: lib.rs
crates/reserve_data/: Cargo.toml
crates/reserve_data/src/: lib.rs
crates/settlement_config/: Cargo.toml
crates/settlement_config/src/: lib.rs
crates/settlement_data/: Cargo.toml
crates/settlement_data/src/: lib.rs
crates/stpasa_solution/: Cargo.toml
crates/stpasa_solution/src/: lib.rs
crates/trading_data/: Cargo.toml
crates/trading_data/src/: lib.rs
crates/voltage_instructions/: Cargo.toml
examples/: core_parse.rs  download_and_parse.rs  download_files.rs  load.rs  parquet.rs  parquet_fs.rs  parse.rs  parse_typed.rs
python/mmsdm/: __init__.py  data_model.py  key.py  partition.py
sql/: clickhouse_tables.sql  mmsdm_procs.sql  mmsdm_tables.sql
src/: clickhouse.rs  confidential_settlements.rs  daily.rs  data_model.rs  dispatch_is.rs  dispatch_scada.rs  error.rs  lib.rs  main.rs  mmsdm.rs  predispatch.rs  predispatch_is.rs  predispatch_sensitivities.rs  rooftop_actual.rs  rooftop_forecast.rs  scraping.rs  sql_server.rs  sql_server.rs.bak  sql_server_auto.rs  yestbid.rs
src/aemo/: dispatch_is.rs  mod.rs  yestbid.rs
src/data_model/: ancillary_services.rs  asoffer.rs  bids.rs  billing_config.rs  billing_run.rs  demand_forecasts.rs  dispatch.rs  force_majeure.rs  gd_instruct.rs  generic_constraint.rs  irauction.rs  market_config.rs  market_notice.rs  mcc_dispatch.rs  meter_data.rs  mrevent.rs  mtpasa.rs  network.rs  p5min.rs  participant_registration.rs  pdpasa.rs  pre_dispatch.rs  prudentials.rs  reserve_data.rs  settlement_config.rs  settlement_data.rs  stpasa_solution.rs  trading_data.rs  voltage_instructions.rs
src/mmsdm/: asoffer.rs  bids.rs  billing_config.rs  billing_run.rs  demand.rs  demand_forecasts.rs  dispatch.rs  force_majeure.rs  gd_instruct.rs  generic_constraint.rs  irauction.rs  market_config.rs  market_notice.rs  mcc_dispatch.rs  meter_data.rs  mrevent.rs  network.rs  p5min.rs  participant_registration.rs  pdpasa.rs  pre_dispatch.rs  prudentials.rs  reserve_data.rs  settlement_config.rs  settlement_data.rs  stpasa_solution.rs  trading_data.rs  voltage_instructions.rs
structs/: dispatch_is.rs  dispatch_regionfcasrequirement.rs  dispatchis_interconnection.rs  dispatchis_regionsum.rs  dregion.rs  dunit.rs  predispatch_casesolution.rs  predispatch_constraintsolution.rs  predispatch_interconnectorres.rs  predispatch_intersensitivities.rs  predispatch_localprice.rs  predispatch_pricesensitivities.rs  predispatch_regionprices.rs  predispatch_regionsolution.rs  rooftop_actual.rs  tunit.rs
structs/done/: dispatch_casesolution.rs  dispatchis_constraint.rs  dispatchis_interconnectorres.rs  dispatchis_localprice.rs  rooftop_forecast.rs  tregion.rs
tests/: test.rs
xtask/: Cargo.toml  xtask.rs
xtask/src/: main.rs
