[package]
name = "mmsdm"
version = "0.3.0"
authors = ["Eric Sheppard <eric@sheppard.cloud>", "Nayika Sheppard <nayika@eigenmo.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/eigenmo-de/mmsdm-rs"
description = "Parse and Transform MMSDM data"
resolver = "2"

[workspace]
members = [
    "codegen",
    "xtask",
]

[[example]]
name = "parquet_fs"
required-features = ["arrow", "dispatch"]

[[example]]
name = "parquet"
required-features = ["arrow", "dispatch"]

[[example]]
name = "load"
required-features = ["sql_server", "dispatch", "settlement_data"]

[[example]]
name = "download_and_parse"
required-features = ["dispatch"]
 

[dependencies.log]
version = "0.4.14"
default-features = false
features = []

[dependencies.zip]
version = "0.5.13"
default-features = false
features = []

[dependencies.csv]
version = "1.1.6"
default-features = false
features = []

[dependencies.chrono-tz]
version = "0.6.1"
default-features = false
features = []

[dependencies.thiserror]
version = "1.0.30"
default-features = false
features = []

[dependencies.rust_decimal]
version = "1.23.1"
default-features = false
features = ["std", "serde"]

[dependencies.serde_json]
version = "1.0.79"
default-features = false
features = ["std"]

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = []

[dependencies.serde]
version = "1.0.136"
features = ["derive"]
default-features = false

[dependencies.chrono]
version = "0.4.19"
features = ["serde", "std"]
default-features = false

[dependencies.arrow2]
version = "0.11.2"
optional = true
default-features = false

[dependencies.tiberius]
version = "0.9.0"
features = ["rust_decimal", "tds73", "chrono"]
default-features = false
optional = true

[dependencies.futures-util]
version = "0.3.21"
optional = true

[dev-dependencies]
anyhow = "1"
tiberius = { version = "0.6", features = ["rust_decimal"] }
serde_json = "1"
env_logger = "0.8"
tokio = { version = "1", features = ["full"]  }
tokio-util = { version = "0.6", features = ["compat"]  }
flate2 = "1"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
futures = "0.3"
rayon = "1.5"
once_cell = "1.3"
bytes = "1"
bincode = "1.3.3"
sled = "0.34.7"


[features]
sql_server = ["tiberius", "futures-util"]
arrow = ["arrow2"]
ancillary_services = []
asoffer = []
bids = []
billing_config = []
billing_run = []
configuration = []
demand_forecasts = []
dispatch = []
force_majeure = []
gd_instruct = []
generic_constraint = []
historical = []
irauction = []
market_config = []
market_notice = []
mcc_dispatch = []
meter_data = []
mrevent = []
mtpasa = []
network = []
p5min = []
participant_registration = []
pdpasa = []
pre_dispatch = []
prudentials = []
reserve_data = []
settlement_config = []
settlement_data = []
stpasa_solution = []
trading_data = []
voltage_instructions = []
mmsdm = ["ancillary_services","asoffer","bids","billing_config","billing_run","configuration","demand_forecasts","dispatch","force_majeure","gd_instruct","generic_constraint","historical","irauction","market_config","market_notice","mcc_dispatch","meter_data","mrevent","mtpasa","network","p5min","participant_registration","pdpasa","pre_dispatch","prudentials","reserve_data","settlement_config","settlement_data","stpasa_solution","trading_data","voltage_instructions"]
default = []
