[workspace]
resolver = "2"
members = [
    "codegen",
    "xtask",
    "crates/*",
]

[workspace.dependencies.tracing]
version = "0.1.41"
default-features = false
features = ["log"]

[workspace.dependencies.zip]
version = "0.6.6"
default-features = false
features = ["deflate"]

[workspace.dependencies.rust_decimal]
version = "1.35.0"
default-features = false
features = []

[workspace.dependencies.num-traits]
version = "0.2.17"
default-features = false
features = []

[workspace.dependencies.chrono]
version = "0.4.33"
features = ["alloc"]
default-features = false

[workspace.dependencies.arrow]
version = "55.0.0"
default-features = false

[workspace.dependencies.csv-core]
version = "0.1.12"
default-features = false