[package]
name = "mmsdm-codegen"
version = "0.1.0"
authors = ["Eric Sheppard <eric@eigenmo.de>", "Nayika Sheppard <nayika@eigenmo.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/esheppa/aemo-rs"
#maintenance = { status = "experimental" }
description = "Code generation for MMSDM data types"

[dependencies]
log = "0.4"
zip = "0.6"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
serde_json = "1"
env_logger = "0.9"
reqwest = "0.11"
scraper = "0.13"
rayon = "1.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
codegen = "0.1"
anyhow = "1"
lazy_static = "1.4"
regex = "1.6"
heck = "0.3"
structopt = "0.3"
prettyplease = "0.1.21"
syn = "1.0.102"
