[package]
name = "xtask"
version = "0.0.0"
authors = ["Eric Sheppard <eric@eigenmo.de>", "Nayika Sheppard <nayika@eigenmo.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/esheppa/aemo-rs"
description = "Build tasks"

[[bin]]
path = "xtask.rs"
name = "xtask" 
## Consider these crates
#   - subprocess
#   - run_script
#   - fsio
[dependencies]
anyhow = "1"
cargo = "0.71.0"

