[package]
name = "mmsdm_core"
version = "0.3.0"
authors = ["Eric Sheppard <eric@sheppard.cloud>", "Nayika Sheppard <nayika@eigenmo.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/eigenmo-de/mmsdm-rs"
description = "Parse and Transform MMSDM data"
resolver = "2"

[[example]]
path = "../../examples/core_parse.rs"
name = "core_parse"

[dependencies.tracing]
workspace = true
features = []

[dependencies.rust_decimal]
workspace = true
features = []

[dependencies.num-traits]
workspace = true
features = []

[dependencies.chrono]
workspace = true
default-features = false

[dependencies.zip]
workspace = true
default-features = false
features = ["deflate"]
optional = true

[dependencies.arrow]
workspace = true
optional = true

[dependencies.csv-core]
workspace = true

[features]
arrow = ["dep:arrow", "std"]
default = ["std"]
std = ["dep:zip", "rust_decimal/std", "chrono/std", "chrono/now", "csv-core/libc"]
