[package]
name = "mmsdm_mtpasa_solution"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/eigenmo-de/mmsdm-rs"
description = "Parse and Transform MMSDM data"
resolver = "2"

[dependencies.log]
version = "0.4.14"
default-features = false
features = []

[dependencies.zip]
version = "0.6.2"
default-features = false
features = []

[dependencies.csv]
version = "1.1.6"
default-features = false
features = []

[dependencies.chrono-tz]
version = "0.8.0"
default-features = false
features = []

[dependencies.thiserror]
version = "1.0.30"
default-features = false
features = []

[dependencies.rust_decimal]
version = "1.26.1"
default-features = false
features = ["std", "serde"]

[dependencies.serde_json]
version = "1.0.79"
default-features = false
features = ["std"]

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = []

[dependencies.serde]
version = "1.0.136"
features = ["derive"]
default-features = false

[dependencies.chrono]
version = "0.4.23"
features = ["serde", "std"]
default-features = false

[dependencies.arrow2]
version = "0.14.2"
optional = true
default-features = false

[dependencies.tiberius]
version = "0.11.3"
features = ["rust_decimal", "tds73", "chrono"]
default-features = false
optional = true

[dependencies.futures-util]
version = "0.3.21"
optional = true

[dependencies.mmsdm_core]
# version = "0.3.0"
path = "../mmsdm_core"

[features]
arrow = ["arrow2", "mmsdm_core/arrow"]
sql_server = ["tiberius", "futures-util", "mmsdm_core/sql_server"]
default = []